fixing index picture spacing

--- a/trips.css
+++ b/trips.css
@@ -40,7 +40,7 @@ h3{
   padding-top: 1vw;
   /*display: inline-block;*/
   align-items: center;
-  min-height: 20vw;
+  min-height: 30vw;
   text-align: center;
   border-top: 1px solid grey;
 
